[package]
name = "sigma-compress"
version = "0.1.0"
edition = "2021"
description = "Semantic-aware compression using Huffman + LZ4 + entropy coding for Ryzanstein"
license = "AGPL-3.0"
authors = ["Ryzanstein Team"]

[dependencies]
lz4 = "1.24"
flate2 = "1.0"
bitstream-io = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.9"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[features]
simd = []
python-bindings = []

